# villa_perception

./: .gitignore  .travis.yml  README.md  tags
activity_detection/scripts/: activityDetection_action.py  activityDetection_client.py
age_identification/: CMakeLists.txt  README.md  package.xml
age_identification/launch/: age_identification.launch
age_identification/scripts/: age_classifier.py  age_publisher
face_recognition/: CMakeLists.txt  README.md  test.py  test_example.py
face_recognition/action/: FaceRecog.action
face_recognition/scripts/: Person_Identity_service.py  face_action_client.py  face_action_server.py  face_photo_action.py  face_recog_action.py  (+7 more)
gender_identification/: .gitignore  CMakeLists.txt  README.md  package.xml
gender_identification/scripts/: gender_classifier.py  gender_identification_server  gender_publisher
gender_identification/srv/: GenderIdentification.srv
grabcut/: CMakeLists.txt  grabCut.py  package.xml
ros-keyboard/: README.md
tmc_darknet_ros/: README.md
tmc_darknet_ros/hsrb_darknet_tutorials/: CMakeLists.txt  README.rst  package.xml
tmc_darknet_ros/hsrb_darknet_tutorials/config/: BBox-Label-Tool.patch  base.cfg  increase_picture.patch
tmc_darknet_ros/hsrb_darknet_tutorials/data_samples/labels/001/: sample01.txt  sample02.txt  sample03.txt  sample04.txt  sample05.txt  sample06.txt  sample07.txt  sample08.txt  sample09.txt  sample10.txt  sample11.txt  sample12.txt  sample13.txt  sample14.txt  sample15.txt  sample16.txt  sample17.txt  sample18.txt  sample19.txt  sample20.txt  sample21.txt  sample22.txt  sample28.txt  sample38.txt  sample39.txt  sample40.txt  sample41.txt  sample42.txt  sample43.txt  sample44.txt  sample45.txt  sample46.txt  sample47.txt  sample48.txt  sample49.txt  sample50.txt
tmc_darknet_ros/hsrb_darknet_tutorials/data_samples/labels/002/: sample02.txt  sample03.txt  sample04.txt  sample05.txt  sample06.txt  sample07.txt  sample08.txt  sample09.txt  sample10.txt  sample11.txt  sample12.txt  sample13.txt  sample14.txt  sample15.txt  sample16.txt  sample17.txt  sample18.txt  sample19.txt  sample20.txt  sample22.txt  sample28.txt  sample30.txt  sample31.txt  sample32.txt  sample33.txt  sample34.txt  sample35.txt  sample36.txt  sample37.txt  sample38.txt  sample39.txt  sample40.txt  sample42.txt  sample43.txt  sample44.txt  sample45.txt  sample47.txt  sample48.txt  sample49.txt  sample50.txt
tmc_darknet_ros/hsrb_darknet_tutorials/data_samples/labels/003/: sample03.txt  sample04.txt  sample05.txt  sample06.txt  sample08.txt  sample09.txt  sample10.txt  sample12.txt  sample13.txt  sample18.txt  sample19.txt  sample20.txt  sample23.txt  sample24.txt  sample25.txt  sample26.txt  sample27.txt  sample28.txt  sample29.txt  sample30.txt  sample31.txt  sample35.txt  sample38.txt  sample39.txt  sample40.txt  sample41.txt  sample43.txt  sample47.txt  sample48.txt  sample49.txt  sample50.txt
tmc_darknet_ros/hsrb_darknet_tutorials/launch/: custom_model_demo.launch  default_model_demo.launch  yolo_learning.launch
tmc_darknet_ros/hsrb_darknet_tutorials/scripts/: create_darknet_data
tmc_darknet_ros/hsrb_darknet_tutorials/scripts/install_scripts/: get_yolo_data.sh  install_tk1_settings.sh  install_training_settings.sh
tmc_darknet_ros/hsrb_darknet_tutorials/worlds/: yolo_learning.world
tmc_darknet_ros/tmc_darknet/: CHANGELOG.rst  CMakeLists.txt  package.xml
tmc_darknet_ros/tmc_darknet/include/tmc_darknet/: col2im.h  im2col.h
tmc_darknet_ros/tmc_yolo2_ros/: CMakeLists.txt  README.rst  package.xml  setup.py
tmc_darknet_ros/tmc_yolo2_ros/include/tmc_yolo2_ros/: detector.hpp  yolo2_node.hpp
tmc_darknet_ros/tmc_yolo2_ros/scripts/: yolo2_image_node
tmc_darknet_ros/tmc_yolo2_ros/src/: detector.cpp  single_image.cpp  training.c  yolo2_node.cpp  yolo2_node_main.cpp
tmc_darknet_ros/tmc_yolo2_ros/src/tmc_yolo2_ros/: yolo2_image_node.py
tmc_darknet_ros/tmc_yolo2_ros/test/: yolo2_node-test.cpp  yolo2_node-test.test  yolo2_node_stub.cpp
villa_3d_object_extract/: CMakeLists.txt  README.md  package.xml
villa_3d_object_extract/config/: kinect_yolo_bounding_box.rviz  yolo_bounding_box.rviz
villa_3d_object_extract/include/: BoundingBoxDObject.h  BoundingBoxDObject_nicolas.h  BoundingBoxPersonDesc.h  Cluster3DBoundingBox.h  Cluster3DBoundingBoxDistanceCompare.h  Mean3DTrackingBox.h  TrackingBoxDObject.h  TrackingBoxPersonDesc.h  chair_tmc_cluster_based_yolo_3D_extractor.h  features_classifier.h  human_tmc_cluster_based_yolo_3D_extractor.h
villa_3d_object_extract/launch/: visualize.launch
villa_3d_object_extract/src/: BoundingBoxDObject.cpp  BoundingBoxDObject_nicolas.cpp  BoundingBoxPersonDesc.cpp  Cluster3DBoundingBox.cpp  Mean3DTrackingBox.cpp  Tracking.cpp  TrackingBoxDObject.cpp  TrackingBoxPersonDesc.cpp  chair_tmc_cluster_based_yolo_3D_extractor.cpp  features.cpp  features_classifier.cpp  human_features_extractor.cpp  human_tmc_cluster_based_yolo_3D_extractor.cpp  tmc_cluster_based_yolo_3D_extractor.cpp  tmc_yolo_3D_extractor.cpp  tmc_yolo_3D_extractor_kinect1.cpp  tmc_yolo_3D_extractor_roscallserv.cpp
villa_3d_object_extract/src/deprecated/: object_bounding_boxes.cpp
villa_calibration/: CMakeLists.txt  hand_fish.yaml  head_fish.yaml  head_rgbd.yaml  package.xml
villa_calibration/include/: CVUtil.h  HomographyShortcuts.h  RigidTrans.h
villa_calibration/include/deprecated/: CalibrationModel.h
villa_calibration/src/: CVUtil.cc  CameraIntrinsics.cc  CameraOptimizationParameters.cc  DistortionModel.cc  HomCartShortcuts.cc  HomographyShortcuts.cc  LinearAlgebraShortcuts.cc  ModelChessboard.cc  OptRTDistCostFunctor.cc  RigidTrans.cc  SingleCameraOptimizer.cc  TransformShortcuts.cc  Util.cc  ZhangLinearEstimate.cc  villa_calibration.cc
villa_perception_msgs/: CMakeLists.txt  package.xml
villa_pointcloud_accumulator/: CMakeLists.txt  package.xml
villa_rude_carnie_ros/: CMakeLists.txt  README.md  package.xml  setup.py
villa_rude_carnie_ros/checkpoints/: .gitignore  get_weights.sh
villa_rude_carnie_ros/src/rude_carnie/: detect.py  eval.py  guess.py  paths.py  train.py  utils.py  utils_ros.py
(+53 files in other folders)
