<?xml version="1.0"?>
<package>
  <name>grabcut</name>
  <version>0.0.0</version>
  <description>The grabcut package</description>

  <maintainer email="nicolas@todo.todo">nicolas</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>opencv2</build_depend>
  
  <run_depend>opencv2</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>cv_bridge</run_depend>

  <export>

  </export>
</package>
