<?xml version="1.0"?>
<package format="2">
  <name>villa_calibration</name>
  <version>0.3.12</version>
  <description>The villa_calibration package</description>

  <maintainer email="hart@cs.utexas.edu">Justin Hart</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>cmake_modules</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>roslib</depend>
</package>
